Added Erase & Randomise PE Headers
Also did some code clean up and optimisations

--- a/Simple-Injection/Simple-Injection.csproj
+++ b/Simple-Injection/Simple-Injection.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <Compile Include="Etc\Native.cs" />
     <Compile Include="Etc\Shellcode.cs" />
+    <Compile Include="Etc\Wrapper.cs" />
+    <Compile Include="Extensions\MEraseHeaders.cs" />
+    <Compile Include="Extensions\MRandomiseHeaders.cs" />
     <Compile Include="Injector.cs" />
     <Compile Include="Methods\MCreateRemoteThread.cs" />
     <Compile Include="Methods\MQueueUserAPC.cs" />
