Various optimisations to the ManualMap method

--- a/Bleak/Bleak.csproj
+++ b/Bleak/Bleak.csproj
@@ -3,14 +3,17 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Description>A Windows DLL injection library written in C# that supports several methods of injection.</Description>
+    <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
     <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.1.1</Version>
+    <Authors>Akaion</Authors>
+    <Company />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PeNet" Version="0.8.0" />
+    <PackageReference Include="PeNet" Version="0.8.1" />
   </ItemGroup>
 
 </Project>
