--- a/Bleak.Tests.x64/Bleak.Tests.x64.csproj
+++ b/Bleak.Tests.x64/Bleak.Tests.x64.csproj
@@ -65,7 +65,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests.cs" />
+    <Compile Include="ExtensionTests.cs" />
+    <Compile Include="MethodTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -75,8 +76,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Test-Dll-x64.dll" />
-    <Content Include="TestProcess.exe" />
+    <Content Include="Etc\Test-Dll-x64.dll" />
+    <Content Include="Etc\TestProcess.exe" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
