--- a/Bleak/Bleak.csproj
+++ b/Bleak/Bleak.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>latest</LangVersion>
-        <PackageVersion>1.4.1</PackageVersion>
+        <PackageVersion>1.5.1</PackageVersion>
         <Authors>Akaion</Authors>
         <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
         <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
