--- a/Bleak.Tests/Bleak.Tests.csproj
+++ b/Bleak.Tests/Bleak.Tests.csproj
@@ -9,17 +9,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.0-preview-20181205-02" />
+        <PackageReference Include="xunit" Version="2.4.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Etc\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Bleak\Bleak.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Etc" />
     </ItemGroup>
 
 </Project>
