--- a/Bleak/Bleak.csproj
+++ b/Bleak/Bleak.csproj
@@ -1,22 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
-        <PackageVersion>1.6.5</PackageVersion>
-        <Authors>Akaion</Authors>
-        <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
-        <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-    </PropertyGroup>
-
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <Optimize>true</Optimize>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Jupiter" Version="1.5.1" />
-      <PackageReference Include="PeNet" Version="1.0.1" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>2.0.0</Version>
+    <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
+    <PackageProjectUrl></PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
+    <Authors>Akaion</Authors>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
 
 </Project>
