--- a/Bleak/Bleak.csproj
+++ b/Bleak/Bleak.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.2</Version>
-    <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
-    <PackageProjectUrl></PackageProjectUrl>
-    <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
-    <Authors>Akaion</Authors>
     <LangVersion>latest</LangVersion>
+    <Version>2.1.0</Version>
+    <Authors>Akaion</Authors>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/Akaion/Bleak</RepositoryUrl>
+    <Description>A Windows native DLL injection library written in C# that supports several methods of injection.</Description>
   </PropertyGroup>
 
 </Project>
