--- a/Bleak.Tests/Bleak.Tests.csproj
+++ b/Bleak.Tests/Bleak.Tests.csproj
@@ -1,25 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
 
-    <IsPackable>false</IsPackable>
+        <IsPackable>false</IsPackable>
 
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+        <PackageReference Include="xunit" Version="2.4.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Etc\" />
-  </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Etc" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Bleak\Bleak.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Bleak\Bleak.csproj" />
+    </ItemGroup>
 
 </Project>
